깃허브 따라하기

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset = 'utf-8'>
         <meta http-equiv="X-UA-Compatible" content = "IE=edge">
         <meta name = "viewport" content = 'width=device-width, initial-scale = 1.0' >
-        <title>Woo-hub</title>
+        <title>Github</title>
 
         <!--파비콘-->
         <link rel="icon" href="./favicon.png">
@@ -57,20 +57,20 @@
                     </a>
                     <ul class="nav flex-grow-1">
                         <li class = 'nav-item'>
-                            <a href="#" class="nav-link text-light">Woo</a>
+                            <a href="#" class="nav-link text-light">Product</a>
                         </li>
                         <li class = 'nav-item'>
-                            <a href="#" class="nav-link text-light">Young</a>
+                            <a href="#" class="nav-link text-light">Solutions</a>
                         </li>
                         <li class = 'nav-item'>
-                            <a href="#" class="nav-link text-light">Chang</a>
+                            <a href="#" class="nav-link text-light">Open Source</a>
                         </li>
                         <li class = 'nav-item'>
-                            <a href="#" class="nav-link text-light">Box</a>
+                            <a href="#" class="nav-link text-light">Pricing</a>
                         </li>
                     </ul>
                     <div class="forms d-flex">
-                        <input type="text" class = 'form-control me-2' placeholder="Search Woo-hub">
+                        <input type="text" class = 'form-control me-2' placeholder="Search Github">
                         <button class = "btn btn-link text-light flex-shrink-0 me-2 text-decoration-none">Sign in</button>
                         <button class = "btn btn-outline-light flex-shrink-0">Sign up</button>
                     </div>
@@ -84,19 +84,19 @@
                         <div class="offcanvas-body">
                             <ul class="list-group list-group-flush mb-4">
                                 <li class="list-group-item">
-                                    <a href="#">Woo</a>
+                                    <a href="#">Product</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="#">Young</a>
+                                    <a href="#">Solutions</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="#">Chang</a>
+                                    <a href="#">Open Source</a>
                                 </li>
                                 <li class="list-group-item">
-                                    <a href="#">Box</a>
+                                    <a href="#">Pricing</a>
                                 </li>
                             </ul>
-                            <input type="text" class="form-control mb-2" placeholder="Search Woohub">
+                            <input type="text" class="form-control mb-2" placeholder="Search Github">
                             <div class="d-grid mb-2">
                                 <button class="btn btn-outline-primary">Sign in</button>
                             </div>
@@ -112,7 +112,7 @@
                 <div class="row">
                     <div class="col-lg-7 col-12">
                         <div class="headline">
-                            <h1 class="text-white">선장님은 어릴 적 꿈이 무엇이었어요?</h1>
+                            <h1 class="text-white">Let's build from here, together</h1>
                             <p class="text-white-50">Millions of developers and companies build, ship, and maintain their software on GitHub—the largest and most advanced development platform in the world.</p>
                         </div>
                     </div>
@@ -120,10 +120,10 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-6 col-12">
                         <form>
-                            <input type="text" class="form-control form-control-lg mb-3" placeholder="전 있잖아요.">
-                            <input type="password" class="form-control form-control-lg mb-3" placeholder="프론트엔드가 되고 싶었어요.">
+                            <input type="text" class="form-control form-control-lg mb-3" placeholder="ID">
+                            <input type="password" class="form-control form-control-lg mb-3" placeholder="Paswword">
                             <div class="d-grid">
-                                <button class="btn btn-primary btn-lg">Sigh up for Woo-hub</button>
+                                <button class="btn btn-primary btn-lg">Sigh up for Github</button>
                             </div>
                         </form>
                     </div>
@@ -150,37 +150,37 @@
                 <div class="row">
                     <div class="col-lg-3 col-6">
                         <div class="card">
-                            <img src="./woo.png" alt="WOO1" class="card-img-top">
+                            <img src="./images/features-build.png" alt="WOO1" class="card-img-top">
                             <div class="card-body text-center">
-                                <h5 class="card-title"><strong>Woo</strong></h5>
-                                <p class="card-text">아무나 우영창이 될 수 있을 것 같니?</p>
+                                <h5 class="card-title"><strong>안녕하세요.</strong></h5>
+                                <p class="card-text">제가 처음으로 만든 html입니다.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-6">
                         <div class="card">
-                            <img src="./woo2.png" alt="woo2" class="card-img-top">
+                            <img src="./images/features-platform.png" alt="woo2" class="card-img-top">
                             <div class="card-body text-center">
-                                <h5 class="card-title"><strong>분분한 낙화</strong></h5>
-                                <p class="card-text">봄 한 철 격정을 인내한 나의 사랑은 지고있다</p>
+                                <h5 class="card-title"><strong>생각보다 재미있네요.</strong></h5>
+                                <p class="card-text">많은 지적 부탁드립니다.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-6">
                         <div class="card">
-                            <img src="./woo3.png" alt="woo3" class="card-img-top">
+                            <img src="./images/features-projects.png" alt="woo3" class="card-img-top">
                             <div class="card-body text-center">
-                                <h5 class="card-title"><strong>한 잔은</strong></h5>
-                                <p class="card-text">떠나간 너를 위하여</p>
+                                <h5 class="card-title"><strong>열심히 하겠습니다.</strong></h5>
+                                <p class="card-text">감사합니다.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-6">
                         <div class="card">
-                            <img src="./woo4.png" alt="woo4" class="card-img-top">
+                            <img src="./images/features-work.png" alt="woo4" class="card-img-top">
                             <div class="card-body text-center">
-                                <h5 class="card-title"><strong>한 잔은</strong></h5>
-                                <p class="card-text">너와 나의 영원했던 사랑을 위하여</p>
+                                <h5 class="card-title"><strong>위에 유튜브 영상은</strong></h5>
+                                <p class="card-text">제가 제일 좋아하는 시 영상을 첨부했습니다.(재미로)</p>
                             </div>
                         </div>
                     </div>
@@ -194,8 +194,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-12">
-                        <h1>Where is Woohub</h1>
-                        <p>어디일까요~</p>
+                        <h1>Where is Github</h1>
+                        <p>Location</p>
                     </div>
                     <div class="col-lg-8 col-12">
                         <div id="map" class="shadow"></div>
